--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "web_accessible_resources": [
       { 
         "resources": [
-          "/components/filterWindow.html",
+          "/components/filterWindow.html"
         ],
         "matches": ["<all_urls>"]
       }
