--- a/manifest.json
+++ b/manifest.json
@@ -24,12 +24,14 @@
     {
       "matches": ["https://steamcommunity.com/id/*/inventoryhistory/*"],
       "js": [
+        "/js/background/prototype.js",
+        "/js/background/jQuery.min.js",
+        "/js/background/globalsV.js",
         "content.js",
         "load.js",
         "/js/contentLoader.js",
         "/js/buttonLinker.js",
-        "/js/hover.js",
-        "/js/jQuery.min.js"
+        "/js/background/hover.js"
       ],
       "css": ["./css/filterStyle.css"],
       "run_at": "document_end"
