--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,7 @@
         "./css/filterStyle.css",
         "./css/advancedOptionsDialog.css",
         "./css/generalDialog.css",
+        "./css/simpleSearchBar.css",
         "./css/filterOptionsDialog.css"
       ],
       "run_at": "document_end"
