added link between stats dialog & btn + warning mesage in stats

--- a/manifest.json
+++ b/manifest.json
@@ -48,6 +48,7 @@
         "./css/advancedOptionsDialog.css",
         "./css/generalDialog.css",
         "./css/simpleSearchBar.css",
+        "./css/statsDialog.css",
         "./css/filterOptionsDialog.css"
       ],
       "run_at": "document_end"
