--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,9 @@
         "/js/background/globalsV.js",
         "/js/background/hover.js",
         "/js/background/Chart.min.js",
+        "/js/background/chartjs-plugin-zoom.min.js",
+        "/js/background/chartjs-plugin-zoom.esm.js",
+        "/js/background/chartjs-plugin-zoom.js",
         "/js/dialog.js",
         "content.js",
         "load.js",
