--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "CS:GO History Utility Filter",
   "version": "1.3.5",
-  "description": "CS:GO History Utility Filter Extension simplifies inventory browsing, allowing users to quickly load and filter their history while providing statistics and search options.",
+  "description": "CS:GO History Utility Filter: Automate history, filter, search, view stats - for an enhanced inventory browsing experience.",
   "manifest_version": 3,
   "author": "Kelvin Brahe",
   "action":{
