--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,7 @@
         "/js/dialog.js",
         "content.js",
         "load.js",
+        "/js/filterStorage.js",
         "/js/contentLoader.js",
         "/js/buttonLinker.js",
         "/js/statsGraphsNDiagrams.js"
@@ -52,6 +53,7 @@
         "./css/advancedOptionsDialog.css",
         "./css/generalDialog.css",
         "./css/simpleSearchBar.css",
+        "./css/filterHandlerDialog.css",
         "./css/statsDialog.css",
         "./css/settings.css",
         "./css/filterOptionsDialog.css"
