--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,10 @@
       "matches": ["<all_urls>"]
     }
   ],
+  "background": {
+    "service_worker": "/js/background.js",
+    "type": "module"
+  },
   "content_scripts": [
     {
       "matches": [
@@ -60,5 +64,8 @@
       ],
       "run_at": "document_end"
     }
+  ],
+  "permissions": [
+    "storage"
   ]
 } 
