--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CS:GO History Utility Filter",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "CS:GO History Utility Filter: Automate history, filter, search, view stats - for an enhanced inventory browsing experience.",
   "manifest_version": 3,
   "author": "Kelvin Brahe",
@@ -18,7 +18,8 @@
   "web_accessible_resources": [
     { 
       "resources": [
-        "/components/filterWindow.html"
+        "/components/filterWindow.html",
+        "js/background/xlsx.full.min.js"
       ],
       "matches": ["<all_urls>"]
     }
@@ -34,6 +35,7 @@
       "js": [
         "/js/background/prototype.js",
         "/js/background/jQuery.min.js",
+        "/js/background/xlsx.full.min.js",
         "/js/background/globalsV.js",
         "/js/background/hover.js",
         "/js/background/Chart.min.js",
